<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <!--첫번쨰 줄-->
            <LinearLayout
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1.2"
                >

                <android.support.v7.widget.CardView
                   android:layout_marginRight="10dp"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="0.4"
                    app:cardCornerRadius="4dp"
                    >

                    <RelativeLayout
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/tab_2_line_1_btn_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <!-- 현장A, 현장B-->
                        <TextView
                            android:id="@+id/tab_2_line_1_title_1"
                            style="@style/Tab2TitleTextView"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="30dp"
                            android:text="@string/tab_2_line_1_title_1"
                            />

                        <!-- value -->
                        <TextView
                            android:id="@+id/tab_2_line_1_value_1"
                            style="@style/Tab2ValueTextView"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="30dp"
                            android:text="@string/tab_2_line_1_value_1"
                            />

                    </RelativeLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_marginRight="10dp"
                    android:padding="10dp"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="0.4"
                    app:cardCornerRadius="4dp"
                    >

                    <RelativeLayout
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/tab_2_line_1_btn_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <!-- 현장A, 현장B-->
                        <TextView
                            android:id="@+id/tab_2_line_1_title_2"
                            style="@style/Tab2TitleTextView"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="30dp"
                            android:text="@string/tab_2_line_1_title_2"
                            />

                        <!-- value -->
                        <TextView
                            android:id="@+id/tab_2_line_1_value_2"
                            style="@style/Tab2ValueTextView"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="30dp"
                            android:text="@string/tab_2_line_1_value_1"
                            />

                    </RelativeLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:padding="10dp"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="0.4"
                    app:cardCornerRadius="4dp"
                    >

                    <RelativeLayout
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/tab_2_line_1_btn_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <!-- 현장A, 현장B-->
                        <TextView
                            android:id="@+id/tab_2_line_1_title_3"
                            style="@style/Tab2TitleTextView"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="30dp"
                            android:text="@string/tab_2_line_1_title_3"
                            />

                        <!-- value -->
                        <TextView
                            android:id="@+id/tab_2_line_1_value_3"
                            style="@style/Tab2ValueTextView"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="30dp"
                            android:text="@string/tab_2_line_1_value_3"
                            />

                    </RelativeLayout>


                </android.support.v7.widget.CardView>

            </LinearLayout>

            <!--두번쨰 줄-->
            <LinearLayout

                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1.2"
                >

                <android.support.v7.widget.CardView
                    android:layout_marginRight="10dp"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="0.4"
                    app:cardCornerRadius="4dp"
                    >

                    <RelativeLayout
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/tab_2_line_2_btn_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <!-- 현장A, 현장B-->
                        <TextView
                            android:id="@+id/tab_2_line_2_title_1"
                            style="@style/Tab2TitleTextView"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="30dp"
                            android:text="@string/tab_2_line_2_title_1"
                            />

                        <!-- value -->
                        <TextView
                            android:id="@+id/tab_2_line_2_value_1"
                            style="@style/Tab2ValueTextView"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="30dp"
                            android:text="@string/tab_2_line_2_value_1"
                            />

                    </RelativeLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_marginRight="10dp"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="0.4"
                    app:cardCornerRadius="4dp"
                    >

                    <RelativeLayout
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/tab_2_line_2_btn_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <!-- 현장A, 현장B-->
                        <TextView
                            android:id="@+id/tab_2_line_2_title_2"
                            style="@style/Tab2TitleTextView"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="30dp"
                            android:text="@string/tab_2_line_2_title_2"
                            />

                        <!-- value -->
                        <TextView
                            android:id="@+id/tab_2_line_2_value_2"
                            style="@style/Tab2ValueTextView"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="30dp"
                            android:text="@string/tab_2_line_2_value_1"
                            />

                    </RelativeLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="0.4"
                    app:cardCornerRadius="4dp"
                    >

                    <RelativeLayout
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/tab_2_line_2_btn_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <!-- 현장A, 현장B-->
                        <TextView
                            android:id="@+id/tab_2_line_2_title_3"
                            style="@style/Tab2TitleTextView"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="30dp"
                            android:text="@string/tab_2_line_2_title_3"
                            />

                        <!-- value -->
                        <TextView
                            android:id="@+id/tab_2_line_2_value_3"
                            style="@style/Tab2ValueTextView"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="30dp"
                            android:text="@string/tab_2_line_2_value_3"
                            />

                    </RelativeLayout>


                </android.support.v7.widget.CardView>

            </LinearLayout>



            <!--세번쨰 줄-->
            <LinearLayout

                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1.2"
                >

                <android.support.v7.widget.CardView
                    android:layout_marginRight="10dp"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="0.4"
                    app:cardCornerRadius="4dp"
                    >

                    <RelativeLayout
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/tab_2_line_3_btn_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <!-- 현장A, 현장B-->
                        <TextView
                            android:id="@+id/tab_2_line_3_title_1"
                            style="@style/Tab2TitleTextView"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="30dp"
                            android:text="@string/tab_2_line_3_title_1"
                            />

                        <!-- value -->
                        <TextView
                            android:id="@+id/tab_2_line_3_value_1"
                            style="@style/Tab2ValueTextView"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="30dp"
                            android:text="@string/tab_2_line_3_value_1"
                            />

                    </RelativeLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_marginRight="10dp"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="0.4"
                    app:cardCornerRadius="4dp"
                    >

                    <RelativeLayout
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/tab_2_line_3_btn_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <!-- 현장A, 현장B-->
                        <TextView
                            android:id="@+id/tab_2_line_3_title_2"
                            style="@style/Tab2TitleTextView"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="30dp"
                            android:text="@string/tab_2_line_3_title_2"
                            />

                        <!-- value -->
                        <TextView
                            android:id="@+id/tab_2_line_3_value_2"
                            style="@style/Tab2ValueTextView"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="30dp"
                            android:text="@string/tab_2_line_3_value_1"
                            />

                    </RelativeLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="0.4"
                    app:cardCornerRadius="4dp"
                    >

                    <RelativeLayout
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/tab_2_line_3_btn_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <!-- 현장A, 현장B-->
                        <TextView
                            android:id="@+id/tab_2_line_3_title_3"
                            style="@style/Tab2TitleTextView"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="30dp"
                            android:text="@string/tab_2_line_3_title_3"
                            />

                        <!-- value -->
                        <TextView
                            android:id="@+id/tab_2_line_3_value_3"
                            style="@style/Tab2ValueTextView"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="30dp"
                            android:text="@string/tab_2_line_3_value_3"
                            />

                    </RelativeLayout>


                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>



