<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <!--android:theme="@style/ThemeOverlay.AppCompat.Dark"-->

        <!--android:layout_height="@dimen/nav_header_expansion_height"-->

        <RelativeLayout
            android:layout_marginTop="15dp"
            android:id="@+id/menu_header_layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/menu_header_layout_1_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/menu_header_layout_1_txt_1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_tablet_medium" />

            <ImageView
                android:visibility="gone"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_ben" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@+id/menu_header_layout_1"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
           />

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/menu_header_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.2"
            android:layout_marginTop="20dp"
            android:background="@color/gray"
            >

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="@dimen/text_large"
                android:textColor="@color/black"
                android:text="환 경 설 정"
                />

        </RelativeLayout>

        <Button
            android:visibility="gone"
            android:id="@+id/menu_header_button"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="@string/nav_header_title"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <RelativeLayout
            android:id="@+id/menu_header_layout_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/menu_list_txt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/menu_list_txt_1"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium" />

            <!-- 첫번쨰-->
        </RelativeLayout>

        <!-- 두번쨰-->
        <RelativeLayout
            android:id="@+id/menu_header_layout_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/menu_list_txt_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/menu_list_txt_2"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium" />

        </RelativeLayout>


        <!-- 세번쨰-->
        <RelativeLayout
            android:id="@+id/menu_header_layout_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/menu_list_txt_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/menu_list_txt_3"
                android:textColor="@color/black"
                android:textSize="@dimen/text_medium" />

        </RelativeLayout>

        <RelativeLayout
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            >


        </RelativeLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>


